[package]
name = "bevy_chess"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5", features = ["dynamic"] }
bevy_mod_picking = "0.4"
rand = "0.8.4"

[profile.release]
lto = true
